--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,55 @@
     </nav>
   </div>
 
+  {{!-- brand container --}}
   <div class="container">
+
+    <div class="row center-align">
+      <div class="col s12">
+        <h1 class="main">Brand</h1>
+      </div>
+    </div>
+
+    {{!-- second "nav" --}}
+    <div class="row center-align">
+
+      <div class="mind">
+        <div class="col s2">
+          <p>Mind & Body</p>
+        </div>
+      </div>
+
+      <div class="love">
+        <div class="col s2">
+          <p>Love & Intimacy</p>
+        </div>
+      </div>
+
+      <div class="fertility">
+        <div class="col s2">
+          <p>Fertility & Pregnancy</p>
+        </div>
+      </div>
+
+      <div class="family">
+        <div class="col s2">
+          <p>Family & Parenting</p>
+        </div>
+      </div>
+
+      <div class="health">
+        <div class="col s2">
+          <p>Women’s Health</p>
+        </div>
+      </div>
+
+      <div class="work">
+        <div class="col s2">
+          <p>Women in the Workplace</p>
+        </div>
+      </div>
+
+    </div>
 
     {{!-- hero image --}}
     <div class="slider">
@@ -44,24 +92,8 @@
       </ul>
     </div>
 
-    {{!-- 2nd nav --}}
-    <nav id="sec-nav">
-      <div class="nav-wrapper sec-nav">
-        <ul class="left">
-          <li><a href="/">Mind & Body</a></li>
-          <li><a href="/">Love & Intimacy</a></li>
-          <li><a href="/">Fertility & Pregnancy</a></li>
-          <li><a href="/">Family & Parenting</a></li>
-          <li><a href="/">Women’s Health</a></li>
-          <li><a href="/">Women in the Workplace</a></li>
-        </ul>
-      </div>
-    </nav>
-
-  </div>
-
-  {{!-- example code below --}}
-  {{!-- <div class="row">
+    {{!-- example code below
+    <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>This is our Home Page!</h2>
@@ -89,9 +121,8 @@
         </ul>
       </div>
     </div> --}}
-  {{!--  --}}
 
-
+  </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
