--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,13 @@
           <li><a href="/">Services</a></li>
           <li><a href="/">Categories</a></li>
         </ul>
+        <ul id="nav-mobile" class="right">
+          <li><a href="/">Sign-up</a></li>
+          <li><a href="/">Login</a></li>
+          <li><a href="/"><i class="fab fa-facebook-square"></i></a></li>
+          <li><a href="/"><i class="fab fa-twitter-square"></i></a></li>
+          <li><a href="/"><i class="fab fa-instagram"></i></a></li>
+        </ul>
       </div>
     </nav>
   </div>
@@ -25,7 +32,7 @@
     </div>
 
     {{!-- second "nav" --}}
-    <div class="row center-align">
+    <div class="row center-align" style="min-height: 30px;">
 
       <div class="mind">
         <div class="col s2">
@@ -71,26 +78,93 @@
         <li>
           <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
           <div class="caption center-align">
-            <h3>One's life has value as long as one attributes value to the life of others, by means of love,
-              friendship, indignation, and compassion. - Simone de Beauvoir</h3>
+            <h3>Text</h3>
           </div>
         </li>
         <li>
           <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
           <div class="caption center-align">
-            <h3>One's life has value as long as one attributes value to the life of others, by means of love,
-              friendship, indignation, and compassion. - Simone de Beauvoir</h3>
+            <h3>Text</h3>
           </div>
         </li>
         <li>
           <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
           <div class="caption center-align">
-            <h3>One's life has value as long as one attributes value to the life of others, by means of love,
-              friendship, indignation, and compassion. - Simone de Beauvoir</h3>
+            <h3>Text</h3>
           </div>
         </li>
       </ul>
     </div>
+
+    {{!-- quote --}}
+    <div class="row">
+      <div class="col s12">
+        <h3>
+          "One's life has value as long as one attributes value to the life of others, by means of love, friendship,
+          indignation, and compassion." - Simone de Beauvoir
+        </h3>
+      </div>
+    </div>
+
+    {{!-- cards --}}
+    <div class="row">
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    {{!-- latest posts --}}
+    <div class="row center-align">
+      <div class="col s12">
+        <h3>
+          Latest Posts
+        </h3>
+      </div>
+    </div>
+
 
     {{!-- example code below
     <div class="row">
