--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,39 @@
 
 </head>
 
+  {{!-- 1st nav --}}
+  <div class="navbar-fixed">
+    <nav id="first-nav">
+      <div class="nav-wrapper first-nav">
+        {{!-- <a href="#" class="brand-logo right">Logo</a> --}}
+        <ul id="nav-mobile" class="left">
+          <li><a href="/">Home</a></li>
+          <li><a href="/">About</a></li>
+          <li><a href="/">Services</a></li>
+          <li><a href="/">Categories</a></li>
+        </ul>
+        <ul id="nav-mobile" class="right">
+          <li><a href="/">Sign-up</a></li>
+          <li><a href="/">Login</a></li>
+          <li><a href="/"><i class="fab fa-facebook-square"></i></a></li>
+          <li><a href="/"><i class="fab fa-twitter-square"></i></a></li>
+          <li><a href="/"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
 <body>
   {{{body}}}
 </body>
+
+        <footer class="page-footer">
+          <div class="footer-copyright">
+            <div class="container">
+            © 2019 Copyright Text
+            <a class="right" href="/">More Links</a>
+            </div>
+          </div>
+        </footer>
 
 </html>
