--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,5 @@
 <div id="home">
 
-  {{!-- 1st nav --}}
-  <div class="navbar-fixed">
-    <nav id="first-nav">
-      <div class="nav-wrapper first-nav">
-        {{!-- <a href="#" class="brand-logo right">Logo</a> --}}
-        <ul id="nav-mobile" class="left">
-          <li><a href="/">Home</a></li>
-          <li><a href="/">About</a></li>
-          <li><a href="/">Services</a></li>
-          <li><a href="/">Categories</a></li>
-        </ul>
-        <ul id="nav-mobile" class="right">
-          <li><a href="/">Sign-up</a></li>
-          <li><a href="/">Login</a></li>
-          <li><a href="/"><i class="fab fa-facebook-square"></i></a></li>
-          <li><a href="/"><i class="fab fa-twitter-square"></i></a></li>
-          <li><a href="/"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-
   {{!-- brand container --}}
   <div class="container">
 
@@ -72,7 +50,7 @@
 
     </div>
 
-    {{!-- hero image --}}
+    {{!-- slider --}}
     <div class="slider">
       <ul class="slides">
         <li>
@@ -113,7 +91,7 @@
         <div class="card">
           <div class="card-image">
             <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>Sample text</p>
@@ -128,7 +106,7 @@
         <div class="card">
           <div class="card-image">
             <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>Sample text</p>
@@ -143,7 +121,7 @@
         <div class="card">
           <div class="card-image">
             <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
+            <span class="card-title"></span>
           </div>
           <div class="card-content">
             <p>Sample text</p>
@@ -165,6 +143,55 @@
       </div>
     </div>
 
+    {{!-- cards --}}
+    <div class="row">
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content">
+            <p>Sample text</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Sample link</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
     {{!-- example code below
     <div class="row">
