--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,19 +54,19 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+          <img src="..."> <!-- random image -->
           <div class="caption center-align">
             <h3>Text</h3>
           </div>
         </li>
         <li>
-          <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+          <img src="..."> <!-- random image -->
           <div class="caption center-align">
             <h3>Text</h3>
           </div>
         </li>
         <li>
-          <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+          <img src="..."> <!-- random image -->
           <div class="caption center-align">
             <h3>Text</h3>
           </div>
