added categories page, modified some CSS, added /categories route

--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -2966,7 +2966,7 @@
             justify-content: space-between;
     padding: 10px 0px;
     color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(51, 51, 51, 0.08);
+    /* background-color: rgba(51, 51, 51, 0.08); */
   }
   
   table, th, td {
