--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,6 +11,7 @@
 #sec-nav {
   background-color: transparent !important;
   height: 40px;
+  margin-bottom: 10px;
 }
 
 nav ul {
@@ -72,8 +73,39 @@ a {
 /* ==================================== footer ==================================== */
 .page-footer {
   background-color: #FFFBE8;
+  padding-top: 0;
 }
 
 .footer-copyright {
   color: rgb(105, 105, 105) !important;
 }
+
+/* ==================================== Hero Banner ==================================== */
+#categories-hero-image {
+  background-image: url('../images/womens-health.jpg');
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-top: 10px;
+}
+
+.hero-text {
+  background-color: #ffffff;
+  color: black;
+  border: 1px solid rgb(105, 105, 105);
+  opacity: 0.6;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-right: 20px;
+  padding-left: 20px;
+  height: 130px;
+}
+
+
+
+
