updated commentary for results section

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -69,7 +69,7 @@
     </div>
 </div>
 
-{{!-- Music results goes here --}}
+{{!-- Article Results go here dynamically using API and javascript--}}
 <div class="row results-body"></div>
 
 
