--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/">About</a></li>
         <li><a href="/">Services</a></li>
-        <li><a href="/">Categories</a></li>
+        <li><a href="/categories">Categories</a></li>
       </ul>
       <ul id="nav-mobile" class="right">
         <li><a href="/">Sign-up</a></li>
