added other links in top nav

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -143,8 +143,8 @@
       </div>
     </div>
 
-    {{!-- cards --}}
-    <div class="row">
+    {{!-- cards, content to be generated dynamically --}}
+    <div class="row latest-results">
 
       <div class="col s12 m4">
         <div class="card">
