--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,8 @@
       {{!-- <a href="#" class="brand-logo right">Logo</a> --}}
       <ul id="nav-mobile" class="left">
         <li><a href="/">Home</a></li>
-        <li><a href="/">About</a></li>
-        <li><a href="/">Services</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/services">Services</a></li>
         <li><a href="/categories">Categories</a></li>
       </ul>
       <ul id="nav-mobile" class="right">
