--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <li><a href="/categories">Categories</a></li>
       </ul>
       <ul id="nav-mobile" class="right">
-        <li><a href="/">Sign-up</a></li>
+        <li><a href="/services">Sign-up</a></li>
         <li><a href="/">Login</a></li>
         <li><a href="/"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="/"><i class="fab fa-twitter-square"></i></a></li>
