moved icons from top to lower nav

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,9 +27,6 @@
       <ul id="nav-mobile" class="right">
         <li><a href="/services">Sign-up</a></li>
         <li><a href="/">Login</a></li>
-        <li><a href="/"><i class="fab fa-facebook-square"></i></a></li>
-        <li><a href="/"><i class="fab fa-twitter-square"></i></a></li>
-        <li><a href="/"><i class="fab fa-instagram"></i></a></li>
       </ul>
     </div>
   </nav>
@@ -39,14 +36,13 @@
   {{{body}}}
 </body>
 
-<footer class="page-footer">
-  <div class="footer-copyright">
-    <div class="container">
-      © 2019 Copyright Text
-      <a class="right" href="/">More Links</a>
-    </div>
-  </div>
-</footer>
+<div class="footer">
+  © 2019 Copyright
+  <a class="social-icons" href="https://github.com/ckayv11" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+  <a class="social-icons" href="https://www.linkedin.com/in/christyvongphakdy/" target="_blank"><i
+      class="fab fa-linkedin-in fa-2x"></i></a>
+  <a class="social-icons" href="https://twitter.com/ckayv11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+</div>
 
 <script src="https://kit.fontawesome.com/85f0bdccf3.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
