--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
     </div>
 
     {{!-- second "nav" --}}
-    <div class="row center-align" style="min-height: 30px;">
+    <div class="row center-align" id="sec-nav" style="min-height: 30px;">
 
       <div class="mind">
         <div class="col s2">
@@ -49,31 +49,33 @@
       </div>
 
     </div>
+  </div>
 
-    {{!-- slider --}}
-    <div class="slider">
-      <ul class="slides">
-        <li>
-          <img src="/images/love-intimacy.jpg">
-          <div class="caption center-align">
-            <h3>Love & Intimacy</h3>
-          </div>
-        </li>
-        <li>
-          <img src="/images/parenting.jpg">
-          <div class="caption center-align">
-            <h3>Family & Parenting</h3>
-          </div>
-        </li>
-        <li>
-          <img src="/images/women-working.jpg">
-          <div class="caption center-align">
-            <h3>Workplace</h3>
-          </div>
-        </li>
-      </ul>
-    </div>
+  {{!-- slider --}}
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="/images/love-intimacy.jpg">
+        <div class="caption center-align">
+          <h3>Love & Intimacy</h3>
+        </div>
+      </li>
+      <li>
+        <img src="/images/parenting.jpg">
+        <div class="caption center-align">
+          <h3>Family & Parenting</h3>
+        </div>
+      </li>
+      <li>
+        <img src="/images/women-working.jpg">
+        <div class="caption center-align">
+          <h3>Workplace</h3>
+        </div>
+      </li>
+    </ul>
+  </div>
 
+  <div class="container">
     {{!-- quote --}}
     <div class="row">
       <div class="col s12">
@@ -136,11 +138,13 @@
 
     {{!-- latest posts --}}
     <div class="row center-align">
-      <div class="col s12">
+      <div class="col s12 m4 l4"></div>
+      <div class="col s12 m4 l4">
         <h3>
           Latest Posts
         </h3>
       </div>
+      <div class="col s12 m12 l4"></div>
     </div>
 
     {{!-- cards, content to be generated dynamically --}}
@@ -222,8 +226,8 @@
         </ul>
       </div>
     </div> --}}
-
   </div>
+</div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
