--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,14 @@
   line-height: 2.5;
 }
 
+#logo-main {
+  display: inline-block;
+  max-width:180px;
+  /* max-height:95px; */
+  width: auto;
+  height: auto;
+}
+
 /* ==================================== nav styling ==================================== */
 #first-nav {
   background-color: #FFFBE8;
@@ -20,6 +28,10 @@ nav ul {
 
 .nav-mobile {
   padding-left: 10px;
+}
+
+.navbar-fixed {
+  margin-bottom: 0%;
 }
 
 nav ul a {
@@ -64,7 +76,7 @@ li {
 
 .caption h3 {
   color: whitesmoke;
-  background-color: rgba(137, 122, 146, 0.664);
+  background-color: #897a92a9;
   font-size: 40px;
   border-top: transparent;
   border-bottom: transparent;
