--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,16 +32,37 @@
   </nav>
 </div>
 
+<div class="row center-align" style="margin-bottom: 20px">
+  <div class="col s12">
+    <a href="/"><img id="logo-main" src="/images/lean-toLogo.svg" alt="logo" srcset=""></a>
+  </div>
+</div>
+
 <body>
   {{{body}}}
+
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5cf99eed267b2e5785313bc8/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
+
 </body>
 
 <div class="footer">
   © 2019 Copyright
-  <a class="social-icons" href="https://github.com/ckayv11" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-  <a class="social-icons" href="https://www.linkedin.com/in/christyvongphakdy/" target="_blank"><i
-      class="fab fa-linkedin-in fa-2x"></i></a>
-  <a class="social-icons" href="https://twitter.com/ckayv11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+  <a class="social-icons" href="https://github.com/ckayv11/project2" target="_blank"><i
+      class="fab fa-github fa-2x"></i></a>
+  <a class="social-icons" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
+  <a class="social-icons" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
 </div>
 
 <script src="https://kit.fontawesome.com/85f0bdccf3.js"></script>
