in main.hb, added a Volunteer and Request Assistance modals in top nav. used Jen's modal sign-up code

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -150,6 +150,14 @@ a {
   color: black;
 }
 
+/* modals */
+.modal-content h4 {
+  color: rgb(105, 105, 105);
+}
+
+.modal-content h6 {
+   color: black;
+}
 
 /* ==================================== footer ==================================== */
 /* .page-footer {
