--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -401,7 +401,7 @@
                       </div>
                     </form>
                   </div>
-                  <a class="modal-close waves-effect waves-light btn">Submit</a>
+                  <a class="modal-close waves-effect waves-light btn" id="submit-vol">Submit</a>
                 </form>
               </div>
 
